@@ -1,3 +1,7 @@
+2003-05-16    <karl@gnu.org>
+
+	* makeinfo/index.c (sort_index): don't deref NULL.  Report from Jan.
+
 2003-05-13    <karl@gnu.org>
 
 	* makeinfo/html.c (append_char): appease sgi compiler.
